--- a/priv/admin/style.css
+++ b/priv/admin/style.css
@@ -372,11 +372,11 @@ input.gui-point-button:active, input.gui-rect-button:active {padding-bottom: 9px
 #add-node {
     width: auto;
     height: 100px;
+    position: relative;
 }
 
 #cluster-table .node {
-    cursor:pointer;
-    cursor:hand;
+
 }
 
 #cluster-table .node td {
@@ -413,6 +413,15 @@ input.gui-point-button:active, input.gui-rect-button:active {padding-bottom: 9px
 #cluster-table .node:hover {
     background: url(/admin/ui/node-bg.png) left top repeat transparent;
     background: rgba(255,255,255,.1);
+}
+
+#node-error {
+    height: 18px;
+    position: absolute;
+    top: 68px;
+    left: 0;
+    font-size: 13px;
+    letter-spacing: 1px;
 }
 
 /*
