--- a/priv/admin/style.css
+++ b/priv/admin/style.css
@@ -88,6 +88,9 @@ h3 {
     display: block;
     padding-bottom: 8px;
 }
+h3.no-pad {
+    padding: 0;
+}
 
 
 #tooltips {
@@ -95,13 +98,23 @@ h3 {
     bottom: 0;
     width: 100%;
     height: 50px;
+    background: transparent;
+    text-align: center;
+}
+#inner-tooltips {
+    text-align: left;
+    margin: 0 16px;;
+    height: 50px;
     background: #1d1d1d;
     background: rgba(15, 15, 15, .8);
-    border-top: 3px solid #444;
-    border-top: 3px solid rgba(255, 255, 255, .25);
+    border: 2px solid #444;
+    border: 2px solid rgba(255, 255, 255, .25);
     -webkit-box-shadow: 0 0 15px #111; 
     -moz-box-shadow: 0 0 15px #111;
     box-shadow: 0 0 15px #111;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
 }
 #display-tips {
     width: auto;
@@ -477,9 +490,13 @@ input.gui-point-button:active, input.gui-rect-button:active {padding-bottom: 9px
 
 
 /* CODE FOR RING CONTENT */
+#ring-table {
+    margin-bottom: 75px;
+}
+
 #ring-table .partition td {
-    padding: 2px;
-    height: 48px;
+    padding: 2px 2px 0;
+    height: 45px;
 }
 
 #ring-table .partition td.owner-box {
@@ -488,7 +505,7 @@ input.gui-point-button:active, input.gui-rect-button:active {padding-bottom: 9px
 
 #ring-table .partition td.partition-number {
     width: 20px;
-    padding: 2px 5px;
+    padding: 2px 5px 2px 7px;
 }
 
 #ring-table .partition:hover {
