--- a/priv/admin/style.css
+++ b/priv/admin/style.css
@@ -266,6 +266,30 @@ h3.no-pad {
     -webkit-text-stroke: none;
 }
 
+/* CODE FOR CHECKBOXES */
+.gui-checkbox-wrapper {
+    height: 20px;
+    background: url(/admin/ui/images/checkbox-sprite.png) left top no-repeat transparent;
+    vertical-align: middle;
+    display: inline-block;
+}
+.gui-checkbox {
+    display: block;
+    float: left;
+    width: 20px;
+    height: 20px;
+    opacity: 0;
+    margin: 0;
+    filter: alpha(opacity=0);
+}
+.gui-checkbox-wrapper .gui-text {
+    display: block;
+    height: 20px;
+    float: left;
+    padding-left: 5px;
+    font-size: 15px;
+}
+/* END CODE FOR CHECKBOXES */
 
 /* CODE FOR TEXT FIELDS */
 .gui-field {
@@ -490,6 +514,10 @@ input.gui-point-button:active, input.gui-rect-button:active {padding-bottom: 9px
 
 
 /* CODE FOR RING CONTENT */
+#ring-filter {
+    padding-top: 20px;
+}
+
 #ring-table {
     margin-bottom: 75px;
 }
